# prism

./: README.md
api/: pyproject.toml
api/app/: schemas.py  utils.py
api/app/api/: main.py
api/app/api/routes/: activities.py
api/app/core/: database.py
backend/: pyproject.toml
backend/app/: crud.py  main.py  models.py  schemas.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: activities.py  entries.py  moods.py
backend/app/core/: config.py  database.py
frontend/: package-lock.json  package.json
frontend/src/app/components/: drawer.tsx
web/: package-lock.json  package.json
web/src/app/: layout.tsx
