[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gary White <glw494@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic-settings = "^2.2.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
sqlmodel = "^0.0.16"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
